[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Level 1/GuardPost.png" type="Texture" id=1]
[ext_resource path="res://Level 1/Enemies/GuardPost.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.58741, 17.0835 )

[sub_resource type="Animation" id=2]
resource_name = "Attack Left"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ NodePath("Position2D"), -1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D2"), -1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D"), -1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D2"), -1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D"), -1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D2"), -1 ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack Right"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 7, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ NodePath("Position2D3"), 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D4"), 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D3"), 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D4"), 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D3"), 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D4"), 1 ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Stop Right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 73, 156 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13, 36 )

[node name="GuardPost" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 8 )
scale = Vector2( 1.31797, 1.81462 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 3
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop Left"
"anims/Attack Left" = SubResource( 2 )
"anims/Attack Right" = SubResource( 3 )
"anims/Stop Left" = SubResource( 4 )
"anims/Stop Right" = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -5 )
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -17, 0 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -17, 13 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 26, 0 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 26, 13 )

[node name="HitStop" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.04

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 4.125, 1 )
scale = Vector2( 1.5875, 4.3125 )
process_parent = true
physics_process_parent = true

[node name="Scout" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scout"]
position = Vector2( 4, 6 )
shape = SubResource( 7 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="HitStop" to="." method="_on_HitStop_timeout"]
